Edit and remove cart button were added

--- a/src/index.html
+++ b/src/index.html
@@ -34,26 +34,25 @@
                   <span class="cart__order-price-name">Subtotal:</span>
                   <span class="cart__order-price-sum">$<strong>0</strong></span>
                 </li>
-                <liclass="cart__order-delivery">
+                <li class="cart__order-delivery">
                   <span class="cart__order-price-name">Delivery:</span>
                   <span class="cart__order-price-sum">$<strong>0</strong></span>
                 </li>
                 <li>
                   <span class="cart__order-price-name"><strong>Total:</strong></span>
-                  <span class="cart__order-price-sum"><strong>$<strong>0</strong></span>
+                  <span class="cart__order-price-sum">$<strong>0</strong></span>
                 </li>
-              </ul>
-              <div class="cart__order-confirmation">
+              <li class="cart__order-confirmation">
                 <input type="tel" name="phone" placeholder="Your phone">
                 <input type="text" name="address" placeholder="Your address">
                 <button type="submit" class="btn-secondary">Order</button>
-              </div>
+              </li>
+              </ul>
             </form>
-          </div>
         </div>
       </div>
     </div>
-  </header>
+    </div>
 
     <div id="product-list" class="product-list container"></div>
 
@@ -167,5 +166,6 @@
   <script src="js/functions.js"></script>
   <script src="js/data.js"></script>
   <script src="js/script.js"></script>
+  </header>
 </body>
 </html>
