--- a/src/index.html
+++ b/src/index.html
@@ -218,7 +218,7 @@
             <div class="widget-amount"> <!-- widget-amount -->
               <h3 class="product__params-title">Select quantity</h3>
               <a class="btn-quantity" href="#less"><i class="fas fa-minus"></i></a>
-              <input class="amount" type="text">
+              <input type="text" class="amount" value="1">
               <a class="btn-quantity" href="#more"><i class="fas fa-plus"></i></a>
             </div>
             <p class="product__total-price">
@@ -235,8 +235,10 @@
           {{/each}}
         </div>
       </div>
+      
     </article> <!-- .product -->
     </script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
     <script src="js/app.js" type="module"></script>
 </body>
