--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,9 @@
   <title>Pizzeria</title>
   <link href="https://fonts.googleapis.com/css?family=Lato:400,300i,700%7COswald:300,500,700&amp;subset=latin-ext" rel="stylesheet">
   <link href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/7b7f968a13.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/flickity@3/dist/flickity.min.css">
   <link rel="stylesheet" href="vendor/range-slider.min.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -21,6 +23,7 @@
           <h2 class="logo__subtitle">the best homemade Italian food</h2>
         </div>
         <div class="main-nav">
+          <a href="#home">Home</a>
           <a href="#order">Order</a>
           <a href="#booking">Booking</a>
         </div>
@@ -62,6 +65,9 @@
   </header>
 
   <div id="pages">
+    <section id="home">
+      <div class="home-wrapper container"></div>
+    </section>
     <section id="order">
       <div id="product-list" class="product-list container"></div>
     </section>
@@ -240,10 +246,154 @@
 
     </article> <!-- .product -->
     </script>
+    <script id="template-home-widget" type="text/x-handlebars-template">
+      <div class="home-widget">
+        <div class="starter">
+          <div class="order-online">
+            <div class="starter-text">
+              <a href="#order">
+                <h2>ORDER ONLINE</h2>
+                <p class="hover-text">Delicious food delivered to your door</p>
+              </a>
+            </div>
+            <img class="starter-photo" src="images/home/pizza-1.jpg">
+          </div>
+          <div class="book-table">
+            <div class="starter-text">
+              <a href="#booking">
+                <h2>Book a Table</h2>
+                <p>Book your place and get DISSCOUNT</p>
+              </a>
+            </div>
+            <img class="starter-photo" src="images/home/pizza-2.jpg">
+          </div>
+        </div>
+        <div class="open-hours">
+          <h3>OPENING HOURS:</h3>
+          <p>TUE-SUN, 12PM - 12AM</p>
+        </div>
+        <div class="opinions">
+          <div class="carousel">
+            <div class="carousel-cell">
+              <div class="opinion">
+                <div class="opinion-image">
+                  <img src="images/home/pizza-3.jpg">
+                </div>
+                <div class="opinion-description">
+                  <h3 class="opinion-tittle">Best Service</h3>
+                  <p class="opinion-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam egestas viverra tortor, eu ullamcorper dui imperdiet nec. Nunc sed dolor at elit lobortis sodales.</p>
+                  <p class="opinion-author">- Margaret Osborne</p>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-cell">
+              <div class="opinion">
+                <div class="opinion-image">
+                  <img src="images/home/pizza-3.jpg">
+                </div>
+                <div class="opinion-description">
+                  <h3 class="opinion-tittle">Good Snack</h3>
+                  <p class="opinion-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+                  <p class="opinion-author">- Richard McClintock</p>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-cell">
+              <div class="opinion">
+                <div class="opinion-image">
+                  <img src="images/home/pizza-3.jpg">
+                </div>
+                <div class="opinion-description">
+                  <h3 class="opinion-tittle">Great venue</h3>
+                  <p class="opinion-text">All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet.</p>
+                  <p class="opinion-author">- Arthur Robson</p>
+                </div>
+              </div>
+            </div>
+          </div>>
+        </div>
+        <div class="gallery">
+          <div class="gallery-flex">
+            <div class="hovver"></div>
+            <div class="icons">
+              <a href="#love">
+                <i class="fas fa-heart"></i>
+              </a>
+              <a href="#share">
+                <i class="fas fa-share-alt"></i>
+              </a>
+            </div>
+            <img src="images/home/pizza-4.jpg">
+          </div>
+          <div class="hovver">
+            <div class="icons">
+              <a href="#love">
+                <i class="fas fa-heart"></i>
+              </a>
+              <a href="#share">
+                <i class="fas fa-share-alt"></i>
+              </a>
+            </div class="hovver">
+            <img src="images/home/pizza-5.jpg">
+          </div>
+          <div class="hovver">
+            <div class="icons">
+              <a href="#love">
+                <i class="fas fa-heart"></i>
+              </a>
+              <a href="share">
+                <i class="fas fa-share-alt"></i>
+              </a>
+            </div>
+            <img src="images/home/pizza-6.jpg">
+          </div>
+        </div>
+        <div class="gallery-flex">
+          <div class="hovver">
+            <div class="icons">
+              <a href="#love">
+                <i class="fas fa-heart"></i>
+              </a>
+              <a href="share">
+                <i class="fas fa-share-alt"></i>
+              </a>
+            </div>
+            <img src="images/home/pizza-7.jpg">
+          </div>
+          <div class="hovver">
+            <div class="icons">
+              <a href="#love">
+                <i class="fas fa-heart"></i>
+              </a>
+              <a href="#share">
+                <i class="fas fa-share-alt"></i>
+              </a>
+            </div>
+            <img src="images/home/pizza-8.jpg">
+          </div>
+          <div class="hovver">
+            <div class="icons">
+              <a href="#love">
+                <i class="fas fa-heart"></i>
+              </a>
+              <a href="#share">
+                <i class="fas fa-share-alt"></i>
+              </a>
+            </div>
+            <img src="images/home/pizza-9.jpg">
+          </div>
+        </div>
+      </div>
+      <footer>
+        <a href="#instagram"><p class="footer">Viev more on Instagram</p></a>
+      </footer>
+      </div>
+    </script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <script src="vendor/range-slider.min.js"></script>
+    <script src="https://unpkg.com/flickity@3/dist/flickity.pkgd.min.js"></script>
     <script src="js/app.js" type="module"></script>
 </body>
 </html>
